--- a/environment.yml
+++ b/environment.yml
@@ -1,29 +1,13 @@
-name: jupyter-masterclass
+name: example-environment
 channels:
-    - conda-forge
+  - conda-forge
 dependencies:
-    - python=3.8
-    - pip
-    - notebook
-    - numpy
-    - scikit-image
-    - scipy
-    - pandas
-    - requests
-    - ipywidgets
-    - bqplot
-    - ipyleaflet=0.12.6
-    - pythreejs
-    - ipycanvas
-    - ipyevents
-    - ipysheet
-    - ipytree
-    - ipympl
-    - pywwt
-    - sidecar
-    - voila=0.1
-    - ipyvuetify
-    - voila-vuetify
-    - jupyterlab=2
-    - ipyvolume=0.6.0a6
-    - nodejs=13
+  - numpy
+  - psutil
+  - toolz
+  - matplotlib
+  - dill
+  - pandas
+  - partd
+  - bokeh
+  - dask
