--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -2,35 +2,10 @@ name: example-environment
 channels:
   - conda-forge
 dependencies:
-  # Jupyter
+  - numpy
+  - ipywidgets
+  - bqplot
+  - matplotlib
+  - pandas
   - jupyterlab=2
-  - nodejs=11
-  - nbconvert=5.5
-  - widgetsnbextension=3.5
-  # Python Kernel
-  - ipykernel=5.1
-  - ipywidgets=7.5
-  - ipyleaflet=0.12
-  - altair=3.1
-  - bqplot=0.12
-  - dask=2.1
-  - matplotlib=3.1
-  - pandas=0.24
-  - python=3.8
-  - scikit-image=0.15
-  - scikit-learn=0.21
-  - seaborn=0.9
-  - tensorflow=1.13
-  - sympy=1.4
-  - pyyaml
-  - traittypes==0.2.1
-  - invoke=1.2
-  # C++ Kernel
-  - xeus-cling=0.6
-  - xtensor=0.20.8
-  - xtensor-blas=0.16.1
-  - xwidgets=0.18.0
-  - xleaflet=0.9.0
-  # R Kernel
-  - r-ggplot2
-  - r-irkernel=1.0
+  - voila
