--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -3,8 +3,8 @@ channels:
   - conda-forge
 dependencies:
   - ipywidgets=7.5
-  - altair=3.1
-  - tensorflow=1.13
+  # - altair=3.1
+  # - tensorflow=1.13
   - seaborn=0.9
   - bqplot=0.12
   - matplotlib=3.1
@@ -13,6 +13,6 @@ dependencies:
   - nodejs=11
   - voila=0.1
   - python=3.8
-  - sympy=1.4
-  - scikit-learn=0.21
-  - scikit-image=0.15
+  # - sympy=1.4
+  # - scikit-learn=0.21
+  # - scikit-image=0.15
