--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,18 +1,18 @@
-name: example-environment
+name: jupyter-masterclass
 channels:
   - conda-forge
 dependencies:
   - python=3.8
   - nodejs=12
   - jupyterlab=2
-  - ipywidgets
-  - seaborn
+  - ipywidgets=7.5
+  - seaborn=0.10
   - bqplot=0.12
   - matplotlib
-  - pandas
-  - voila
-  # - altair=3.1
-  # - tensorflow=1.13
-  # - sympy=1.4
-  # - scikit-learn=0.21
-  # - scikit-image=0.15
+  - pandas=1.0
+  - voila=0.1
+  - altair=4.1
+  - tensorflow=2
+  - sympy=1.4
+  - scikit-learn=0.23
+  - scikit-image=0.17
