fix gridstack handles

--- a/jupyter_config.json
+++ b/jupyter_config.json
@@ -1,6 +1,11 @@
 {
   "VoilaConfiguration": {
     "theme": "dark",
-    "template": "gridstack"
+    "template": "gridstack",
+    "resources": {
+      "gridstack": {
+        "show_handles":true
+      }
+    }
   }
 }
