--- a/jupyter_config.json
+++ b/jupyter_config.json
@@ -1,11 +1,4 @@
 {
   "VoilaConfiguration": {
-    "theme": "dark",
-    "template": "gridstack",
-    "resources": {
-      "gridstack": {
-        "show_handles":true
-      }
-    }
-  }
+    "theme": "dark"
 }
